test_next-20151208/20151207211533/build/build_20151207211533_log.txt
test_build: Mon Dec 7 21:16:39 PST 2015: started on defconfig test_next-20151208 (856ed208dd69d03c00670db5c235d253af443440)
test_build: Mon Dec 7 21:16:39 PST 2015: serial is 20151207211533
arch/arm64/mm/mmap.c: In function ‘arch_mmap_rnd’:
arch/arm64/mm/mmap.c:54:1: error: ‘ifdef’ undeclared (first use in this function)
 ifdef CONFIG_COMPAT
 ^
arch/arm64/mm/mmap.c:54:1: note: each undeclared identifier is reported only once for each function it appears in
In file included from ././include/linux/kconfig.h:4:0,
                 from <command-line>:0:
include/generated/autoconf.h:51:23: error: expected ‘;’ before numeric constant
 #define CONFIG_COMPAT 1
                       ^
arch/arm64/mm/mmap.c:54:7: note: in expansion of macro ‘CONFIG_COMPAT’
 ifdef CONFIG_COMPAT
       ^
arch/arm64/mm/mmap.c:57:2: error: ‘else’ without a previous ‘if’
  else
  ^
arch/arm64/mm/mmap.c:58:2: error: #endif without #if
 #endif
  ^
make[1]: *** [arch/arm64/mm/mmap.o] Error 1
make: *** [arch/arm64/mm] Error 2
make: *** Waiting for unfinished jobs....
test_build: Mon Dec 7 21:17:04 PST 2015: FAILED on defconfig test_next-20151208
test_build: Mon Dec 7 21:17:04 PST 2015: ended on defconfig test_next-20151208
